# a2a-agent-template

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: .harness-manifest.json  settings.json
.claude/.claude-plugin/: plugin.json
.claude/agents/: a2a-advisor.md  a2ui-advisor.md  ag-ui-advisor.md  mcp-advisor.md
.claude/agents/core/: analyst.md  codify.md  debug.md  planner.md  redteam.md
.claude/agents/project/: python-implementer.md  sdk-advisor.md
.claude/reference/: a2a-protocol-0_3_0.md  mcp-claude-platforms.md  mcp-protocol.md  sdk-security-invariants.md
.claude/skills/a2a-check/: SKILL.md
.claude/skills/a2ui-check/: SKILL.md
.claude/skills/acceptance/: SKILL.md
.claude/skills/add-artifact/: SKILL.md
.claude/skills/add-source/: SKILL.md
.claude/skills/add-tool/: SKILL.md
.claude/skills/ag-ui-check/: SKILL.md
.claude/skills/agent-stack-check/: SKILL.md
.claude/skills/agent-verify/: SKILL.md
.claude/skills/analyze/: SKILL.md
.claude/skills/changelog/: SKILL.md
.claude/workflows/: acceptance-api.js  wave-cycle.js
src/: config.py  main.py  persona.py
src/artifacts/: system.md
src/skills/: widget-briefing.md
src/sources/: sample_api.py
src/tools/: widgets.py
tests/: conftest.py  test_tools.py
workspace/: README.md
workspace/adr/: README.md  a001-credential-model.md  a002-azure-table-store.md
workspace/components/: README.md
workspace/learning/: README.md
workspace/prd/: README.md
workspace/scenarios/: README.md
workspace/todos/: README.md
(+21 files in other folders)
